# s5p-zarr-workflow

./: .env  .gitignore  1_s5p_initializeZarr.ipynb  2_data_download.ipynb  3_reprojecting.ipynb  CDSETool.ipynb  README.md  download_cdse.py  env.sh  main.py  pyproject.toml  reprojection.py  s5 1.ipynb  s5.ipynb
s5p_zarr_workflow/: download_cdse.py
