[tool.poetry]
name = "s5p-zarr-workflow"
version = "0.1.0"
description = ""
authors = ["Simon Mosonyi <simon.mosonyi@eodc.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cdsetool = "^0.2.13"
xarray = "^2025.7.1"
matplotlib = "^3.10.5"
cartopy = "^0.25.0"
scipy = "^1.16.1"
netcdf4 = "^1.7.2"
rasterio = "^1.4.3"
rioxarray = "^0.19.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
